# erfloc

./: .gitignore  README.md  pyproject.toml
erfloc/: main.py
erfloc/dependencies/: geoloc.py  templates.py
erfloc/models/: coords.py
erfloc/routes/: coords.py  forms.py
erfloc/static/: coords.html
erfloc/statics/: coords.html
erfloc/templates/: eci_coords.html.j2
tests/: nominatim.py
