[tool.poetry]
name = "erfloc"
version = "0.1.0"
description = ""
authors = ["Gianfranco Damato <gianfranco.damato90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
geopy = "^2.4.1"
astropy = "^6.1.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
